--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.denschub.diaspora"
-      android:versionCode="1"
-      android:versionName="1.0">
+	package="de.denschub.diaspora" android:versionCode="1"
+	android:versionName="1.0">
+
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+
+	<uses-sdk android:minSdkVersion="8" />
 
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".HomeActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".HomeActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 
-    </application>
+		<activity android:name=".Login" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+
+		<activity android:name=".UploadImage" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar" android:icon="@drawable/icon">
+			<intent-filter>
+				<action android:name="android.intent.action.SEND" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:mimeType="image/*" />
+			</intent-filter>
+		</activity>
+		<service android:name="DiasporaService" />
+	</application>
 </manifest>
